<?xml version="1.0"?>
<package format="2">
  <name>waypoint_navigator</name>
  <version>0.1.0</version>
  <description>The waypoint_navigator package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waypoint_navigator</url>

  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>laser_geometry</depend>
  <depend>move_base_msgs</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>third_robot_monitor</depend>
</package>
